--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="page-nav">
           <a class="logo link" href="">
             <svg class="logo" width="115px" height="24px">
-              <use href="./images/sprite.svg#icon-Logo"></use>
+              <use href="./images/icons.svg#icon-Logo"></use>
             </svg>
           </a>
 
@@ -75,6 +75,11 @@
           <h2 class="goals-title" hidden>Our goals</h2>
           <ul class="list description-container">
             <li class="description-fix">
+              <div class="description-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-antena"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Strategy</h3>
               <p class="description-text">
                 Our goal is to identify the business problem to walk away with
@@ -82,6 +87,11 @@
               </p>
             </li>
             <li class="description-fix">
+              <div class="description-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Punctuality</h3>
               <p class="description-text">
                 Bring the key message to the brand's audience for the best price
@@ -89,6 +99,11 @@
               </p>
             </li>
             <li class="description-fix">
+              <div class="description-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Diligence</h3>
               <p class="description-text">
                 Research and confirm brands that present the strongest digital
@@ -96,6 +111,11 @@
               </p>
             </li>
             <li class="description-fix">
+              <div class="description-icon">
+                <svg class="" width="64px" height="64px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="description-title">Technologies</h3>
               <p class="description-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -165,29 +185,29 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="social-list-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -211,28 +231,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -256,28 +276,28 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -301,33 +321,78 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="16px" height="16px">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
                 </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!--  Section 5  -->
+
+      <section class="section">
+        <div class="container">
+          <h2 class="castomers-title">Castomers</h2>
+          <ul class="castomers-list list">
+            <li class="castomer-list-item">
+              <a href="" class="castomers-list-link"
+                ><svg class="castomer-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use></svg
+              ></a>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
+            </li>
+            <li>
+              <svg>
+                <use></use>
+              </svg>
             </li>
           </ul>
         </div>
