--- a/index.html
+++ b/index.html
@@ -365,34 +365,35 @@
                   <use href="./images/icons.svg#icon-Logo1"></use></svg
               ></a>
             </li>
-            <li>
-              <a href="">
-                <svg>
-                  <use></use></svg
+            <li class="castomer-list-item">
+              <a href="" class="castomers-list-link">
+                <svg class="castomer-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo2"></use></svg
               ></a>
-              <svg>
-                <use></use>
-              </svg>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="castomer-list-item">
+              <a href="" class="castomers-list-link"
+                ><svg class="castomer-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo3"></use></svg
+              ></a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="castomer-list-item">
+              <a href="" class="castomers-list-link"
+                ><svg class="castomer-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo4"></use></svg
+              ></a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="castomer-list-item">
+              <a href="" class="castomers-list-link"
+                ><svg class="castomer-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo5"></use></svg
+              ></a>
             </li>
-            <li>
-              <svg>
-                <use></use>
-              </svg>
+            <li class="castomer-list-item">
+              <a href="" class="castomers-list-link"
+                ><svg class="castomer-icon" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
