--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <ul class="list description-container">
             <li class="description-fix">
               <div class="description-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-antena"></use>
                 </svg>
               </div>
@@ -88,7 +88,7 @@
             </li>
             <li class="description-fix">
               <div class="description-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -100,7 +100,7 @@
             </li>
             <li class="description-fix">
               <div class="description-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -112,7 +112,7 @@
             </li>
             <li class="description-fix">
               <div class="description-icon">
-                <svg class="" width="64px" height="64px">
+                <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -357,7 +357,7 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="castomers-title">Castomers</h2>
+          <h2 class="castomers-title">Customers</h2>
           <ul class="castomers-list list">
             <li class="castomer-list-item">
               <a href="" class="castomers-list-link"
