--- a/index.html
+++ b/index.html
@@ -412,31 +412,31 @@
         </div>
         <div>
           <p class="footer-socialmedia-title">Social media</p>
-          <ul class="social-list list">
+          <ul class="social-list footer-social-list list">
             <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="" class="social-list-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
