--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
       <div class="container page-footer-container">
         <div class="footer-main-info">
           <a class="logo-footer logo link" href="./index.html"
-            >Web<span class="logo-two">Studio</span></a
-          >
+            >Web<span class="logo-two">Studio</span>
+          </a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
