--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,10 @@
     <header class="page-header">
       <div class="container page-header-container">
         <nav class="page-nav">
-          <a class="logo link" href="./index.html"
-            >Web<span class="logo-one">Studio</span></a
-          >
+          <a class="logo link" href=""
+            ><svg class="logo" width="115px" height="24px">
+              <use href="./images/icons.svg#icon-Logo"></use></svg
+          ></a>
 
           <ul class="menu list">
             <li class="menu-item">
@@ -62,8 +63,13 @@
         <div class="container">
           <h1 hidden>Our Services</h1>
           <ul class="menu-portfolio list link">
-            <li class="link">
-              <button class="main-port-btn port-btn" type="button">All</button>
+            <li class="btn-list-item link">
+              <button
+                class="main-port-btn port-btn main-btn-filter"
+                type="button"
+              >
+                All
+              </button>
             </li>
             <li class="link">
               <button class="main-port-btn port-btn" type="button">
@@ -231,13 +237,48 @@
 
     <footer class="footer">
       <div class="container page-footer-container">
-        <a class="logo-footer logo link" href="./index.html"
-          >Web<span class="logo-two">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-main-info">
+          <a class="logo-footer logo link" href="./index.html"
+            >Web<span class="logo-two">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="footer-socialmedia-title">Social media</p>
+          <ul class="social-list footer-social-list list">
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="" class="social-list-link footer-social-icon-fix">
+                <svg class="social-list-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
