--- a/portfolio.html
+++ b/portfolio.html
@@ -64,12 +64,7 @@
           <h1 hidden>Our Services</h1>
           <ul class="menu-portfolio list link">
             <li class="btn-list-item link">
-              <button
-                class="main-port-btn port-btn main-btn-filter"
-                type="button"
-              >
-                All
-              </button>
+              <button class="main-port-btn port-btn" type="button">All</button>
             </li>
             <li class="link">
               <button class="main-port-btn port-btn" type="button">
@@ -95,7 +90,7 @@
 
           <ul class="service-card list link">
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img11.jpg"
                   alt="Mobile apps"
@@ -111,7 +106,7 @@
               </a>
             </li>
             <li class="service-fix service-card-background list link">
-              <a class="link" href="">
+              <a class="service-images link" href="">
                 <img
                   src="./images/img12.jpg"
                   alt="Cashless reader"
@@ -126,7 +121,7 @@
             </li>
 
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img13.jpg"
                   alt=" Computer and phone screen"
@@ -142,7 +137,7 @@
             <!--  Row 2 -->
 
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img14.jpg"
                   alt="Taxi"
@@ -156,7 +151,7 @@
               </a>
             </li>
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img15.jpg"
                   alt="Screen ilustration"
@@ -170,7 +165,7 @@
               </a>
             </li>
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img16.jpg"
                   alt="Women"
@@ -186,7 +181,7 @@
             <!--  Row 3-->
 
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img17.jpg"
                   alt="Instagram stories"
@@ -201,7 +196,7 @@
               </a>
             </li>
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img18.jpg"
                   alt="Food"
@@ -216,7 +211,7 @@
               </a>
             </li>
             <li class="service-fix service-card-background list link">
-              <a class="link" href=""
+              <a class="service-images link" href=""
                 ><img
                   src="./images/img19.jpg"
                   alt="Coffee"
