--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main>
       <!-- Section 1 main image -->
 
-      <section class="hero hero1">
+      <section class="hero hero-fix">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
 
